# CalibrationEAGLE

./: .gitignore  README.md  main.py  pyproject.toml
alpaca/: llama38b2_40-temperature-0.0.jsonl
eagle/calibration/alpaca/llama38b2_40-temperature-0.0/EAGLE3/: calibration_stats_warmup.pth
eagle/calibration/analysis/: calibration_analysis.py
eagle/calibration/gsm8k/llama38b2_40-temperature-0.0/EAGLE3/: calibration_stats_warmup.pth
eagle/calibration/humaneval/llama38b2_40-temperature-0.0/EAGLE3/: calibration_stats_warmup.pth
eagle/calibration/qa/llama38b2_40-temperature-0.0/EAGLE3/: calibration_stats_warmup.pth
eagle/calibration/sum/llama38b2_40-temperature-0.0/EAGLE3/: calibration_stats_warmup.pth
eagle/evaluation/: alpha.py  gen_ea_answer_llama3chat.py
eagle/model/: cnets.py  ea_model.py  utils.py  utils_c.py
gsm8k/: baseline-temperature-0.0.jsonl  calibrated-temperature-0.0.jsonl  llama38b2_40-temperature-0.0.jsonl
humaneval/: baseline-temperature-0.0.jsonl  calibrated-temperature-0.0.jsonl  llama38b2_40-temperature-0.0.jsonl
qa/: llama38b2_40-temperature-0.0.jsonl
sum/: llama38b2_40-temperature-0.0.jsonl
