[project]
name = "calibrationeagle"
version = "0.1.0"
description = "uv project for calibrationeagle, which is the same as the original EAGLE project but with the calibration module added."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate==0.26.0",
    "anthropic==0.5.0",
    "fschat==0.2.31",
    "openai==0.28.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "transformers==4.53.1",
]
